[package]
name = "solana_alt_bn128_le"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"] }
thiserror = "1.0.69"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"

[dev-dependencies]
array-bytes = "=1.4.1"
serde = "1.0.215"        # must match the serde_derive version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_derive = "1.0.215" # must match the serde version, see https://github.com/serde-rs/serde/issues/2584#issuecomment-1685252251
serde_json = "1.0.132"
criterion = "0.5.1"

[[bench]]
name = "alt_bn128_bench"
harness = false
